# arch-post-installer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  arch-post-installer2.pro  clear-font-cache.cpp  create-sh-file.cpp  create-sh-file.h  enable-trim.cpp  enable-trim.h  gnome-tweaks.cpp  install-ananicy.cpp  install-ananicy.h  install-audio-players.cpp  install-audio-players.h  install-auto-freq.cpp  install-auto-freq.h  install-bluetooth-actions.cpp  install-dbus.cpp  install-de-cinnamon.cpp  install-de-deepin.cpp  install-de-enl.cpp  install-de-enl.h  install-de-lxde.cpp  install-de-lxqt.cpp  install-de-lxqt.h  install-de-mate.cpp  install-de-plasma.cpp  install-de-xfce4.cpp  install-dev-tools.cpp  install-flatpak-software.cpp  install-flatpak-software.h  install-flatpak.cpp  install-flatpak.h  install-freq.cpp  install-gnome.cpp  install-gnome.h  (+41 more)
app-centers/: install-flatpak-software.cpp  install-flatpak.cpp  install-flatpak.h  install-snapd.cpp  install-snapd.h
cleaning/: clear-font-cache.cpp  clear-font-cache.h  install-system-clean.cpp  install-system-clean.h
de/: install-de-cinnamon.cpp  install-de-cinnamon.h  install-de-deepin.cpp  install-de-deepin.h  install-de-enl.cpp  install-de-lxde.cpp  install-de-lxde.h  install-de-lxqt.cpp  install-de-mate.cpp  install-de-mate.h  install-de-plasma.cpp  install-de-plasma.h  install-de-xfce4.cpp  install-de-xfce4.h  install-gnome.cpp
general/: install-auto-freq.cpp  install-auto-freq.h  install-freq.cpp  install-freq.h  install-keys.cpp  install-keys.h  install-make-tools.cpp  install-make-tools.h  install-mirrors.cpp  install-mirrors.h  install-system-tools.cpp  install-system-tools.h
greeter/: install-greeter.cpp
kernels/: install-lqx.cpp  install-lqx.h  install-pf-kernel.cpp  install-pf-kernel.h  install-tkg-kernel.cpp  install-xanmod.cpp
misc/: install-dev-tools.cpp  install-dev-tools.h  install-wine.cpp  install-wine.h
optimization/: enable-trim.cpp  install-ananicy.cpp  install-ananicy.h  install-haveged.cpp  install-haveged.h  install-nohang.cpp  install-rng.cpp  install-rng.h  install-zramswap.cpp  install-zramswap.h
privacy/: install-internet-tools.cpp  install-internet-tools.h  install-messengers.cpp  install-messengers.h  install-security-tools.cpp  install-security-tools.h
sound/: install-alsa-sound.cpp  install-alsa-sound.h  install-audio-players.cpp  install-audio-players.h  install-bluetooth-actions.cpp  install-bluetooth-actions.h  install-pipewire-sound.cpp  install-pipewire-sound.h  install-pulse-audio.cpp  install-pulse-audio.h
tweaks/: gnome-tweaks.cpp  gnome-tweaks.h  optimize-cinnamon.cpp  optimize-cinnamon.h  xfce4-tweaks.h
video/: install-dbus.cpp  install-dbus.h  install-portproton.cpp  install-portproton.h  install-vulkan.cpp  install-vulkan.h
